<resources>
    <string name="app_name">My Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marker_icon">marker icon</string>
    <string name="weather_icon">weather icon</string>
    <string name="app_label">My Weather</string>
    <string name="item_current_location">Current</string>
    <string name="item_find_location">Find</string>
    <string name="item_favourites">Favourites</string>

    <!--    textViews-->
    <string name="text_current_temperature">%dº C</string>
    <string name="text_feels_like_temperature"> Feels like %dºC</string>
    <string name="text_max_min_temperature">%dºC / %dºC</string>
    <string name="text_wind_speed">%s m/s</string>
    <string name="text_humidity">%d %%</string>
    <string name="fragment_find_label">Find a place</string>
    <string name="edittext_hint">City</string>
    <string name="btn_find_text">OK</string>
    <string name="country_hint">Country</string>
    <string name="state_hint">State</string>
    <string name="favourite_btn_text">Faveourite It</string>
    <string name="delete_all_favourites_btn">delete all favourites btn</string>
    <string name="favourites_text_value">Favourites</string>
</resources>