<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bg">

        <TextView
            android:id="@+id/tv_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:text="@string/fragment_find_label"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_find_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="City"
            android:background="@drawable/custom_input"
            android:gravity="start"
            android:hint="@string/edittext_hint"
            android:inputType="text"
            android:padding="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fragment_title" />

        <EditText
            android:id="@+id/et_find_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="State"
            android:background="@drawable/custom_input"
            android:gravity="start"
            android:hint="@string/state_hint"
            android:inputType="text"
            android:padding="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_find_city" />

        <EditText
            android:id="@+id/et_find_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="Country"
            android:background="@drawable/custom_input"
            android:gravity="start"
            android:hint="@string/country_hint"
            android:inputType="text"
            android:padding="4dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/btn_find"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_find_state" />

        <TextView
            android:id="@+id/btn_find"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/btn_find_text"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/et_find_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_find_country" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>